feat: add context for changing languages

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "-react-2023-q4",
+  "name": "graphiql",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
