--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
   "lint-staged": {
     "**/*.{ts,tsx}": [
       "npm run lint:fix",
-      "npm run format:fix"
+      "npm run format:fix",
+      "git add ."
     ]
   }
 }
