--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "lint-staged": "^15.2.0",
     "node-fetch": "^3.3.2",
     "prettier": "^3.1.1",
+    "react-hook-form": "^7.49.2",
     "react-redux": "^9.0.4",
     "sass": "^1.69.5",
     "typescript": "^5.3.3",
