--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-router-dom": "^6.20.1",
+    "react-toastify": "^9.1.3",
     "react-use": "^17.4.2"
   },
   "devDependencies": {
