--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
-    "react-router-dom": "^6.20.1"
+    "react-router-dom": "^6.20.1",
+    "react-toastify": "^9.1.3",
+    "react-use": "^17.4.2"
   },
   "devDependencies": {
     "@reduxjs/toolkit": "^2.0.1",
