--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-firebase-hooks": "^5.1.1",
     "react-router-dom": "^6.20.1",
     "react-toastify": "^9.1.3",
-    "react-use": "^17.4.2"
+    "react-use": "^17.4.2",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@reduxjs/toolkit": "^2.0.1",
